--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/main.css">
-    <title>Static Site</title>
+    <title>Doctors Without Bias | Inclusive Care for Every Body</title>
   </head>
   <body>
     <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
@@ -42,6 +42,7 @@
     </nav>
     <div class="container-fluid hero">
       <h1>Doctors Without Bias</h1>
+      <h6>Inclusive Care for Every Body</h6>
     </div>
     <section class="main">
       <div class="container-fluid">
