--- a/index.html
+++ b/index.html
@@ -44,17 +44,28 @@
       <h1>Doctors Without Bias</h1>
       <h6>Inclusive Care for Every Body</h6>
     </div>
+
+    <div class="container-fluid cta">
+      <div class="row">
+        <div class="col-3"></div>
+        <div class="col-6 form-group">
+          <form class="form-inline" action="index.html" >
+            <label for="email">Be the first to know when DWB launches!</label>
+            <input type="email" id="email" name="" value="" class="form-control" placeholder="me@email.com">
+          </form>
+        </div>
+      </div>
+    </div>
     <section class="main">
-      <div class="container-fluid">
+      <div class="container">
         <div class="row">
-          <div class="col-9">
+          
+          <div class="col-12">
             <h3>Doctors Without Bias is your resource to finding a provider who cares.</h3>
             <p>Healthcare ipsum dolor sit amet, prescription drug prices provider diversity alternative. Trans-friendly aspirin twice-daily, BRCA dementia genetic insulin flavonoid. Insurance globulin provider hemoglobin ischemia. Lab work hydrophilic hypodermic angioblastoma, ectopic aneurysm. </p>
           </div>
-          <div class="col-3">
-
-          </div>
         </div>
+
         <div class="row">
           <div class="col-4">
             <h5>Find a provider.</h5>
