Add about page with scaffold layout

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="#">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Providers</a>
@@ -40,11 +40,43 @@
         </form>
       </div>
     </nav>
-    <div class="container-fluid hero">
+    <div class="container-fluid about-hero">
       <h1>Doctors Without Bias</h1>
       <h6>Inclusive Care for Every Body</h6>
     </div>
 
+    <section class="main">
+      <div class="container">
+
+        <div class="row">
+          <div class="col-12">
+            <h3>Doctors Without Bias is your resource to finding a provider who cares.</h3>
+            <p>Healthcare ipsum dolor sit amet, prescription drug prices provider diversity alternative. Trans-friendly aspirin twice-daily, BRCA dementia genetic insulin flavonoid. Insurance globulin provider hemoglobin ischemia. Lab work hydrophilic hypodermic angioblastoma, ectopic aneurysm. </p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-12">
+            <h3>About Doctors Without Bias</h3>
+            <p>Healthcare ipsum dolor sit amet, prescription drug prices provider diversity alternative. Trans-friendly aspirin twice-daily, BRCA dementia genetic insulin flavonoid. Insurance globulin provider hemoglobin ischemia. Lab work hydrophilic hypodermic angioblastoma, ectopic aneurysm. Healthcare ipsum dolor sit amet, prescription drug prices provider diversity alternative. Healthcare ipsum dolor sit amet, prescription drug prices provider diversity alternative. Healthcare ipsum dolor sit amet, prescription drug prices provider diversity alternative.</p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-12">
+            <h4>What we do</h4>
+            <p>We provide resources for practitioners looking to improve their inclusivity; a directory of inclusive providers; and a forum for reviewing providers based on respectfulness and inclusivity of their practice.</p>
+            <p class="callout">We are explicitly dedicated to helping folks of all shapes, sizes, and backgrounds find high-quality healthcare. We include but do not limit our scope to, diversity of sexual orientation, gender identity or expression, transgender, non-binary, gender-fluid, and gender-queer; people of size and shape; racial, ethnic, religious, or social background; communities of color; veterans; people with disabilities, both visible and invisible; and mental health and cognitive diversity. Did we forget something? <a href="">Let us know!</a></p>
+          </div>
+        </div>
+
+        <div class="row">
+          <h4></h4>
+        </div>
+
+      </div>
+
+    </section>
     <div class="container-fluid cta">
       <div class="row">
         <div class="col-3"></div>
@@ -56,33 +88,6 @@
         </div>
       </div>
     </div>
-    <section class="main">
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <h3>Doctors Without Bias is your resource to finding a provider who cares.</h3>
-            <p>Healthcare ipsum dolor sit amet, prescription drug prices provider diversity alternative. Trans-friendly aspirin twice-daily, BRCA dementia genetic insulin flavonoid. Insurance globulin provider hemoglobin ischemia. Lab work hydrophilic hypodermic angioblastoma, ectopic aneurysm. </p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-4">
-            <h5>Find a provider.</h5>
-            <p>Search by geography, insurance, specialty, certification, rating, and more. <a href="#">Read more...</a></p>
-          </div>
-          <div class="col-4">
-            <h5>Review providers.</h5>
-            <p>Had a great experience? A not so great one? Let others know! <a href="#">Read more...</a></p>
-          </div>
-          <div class="col-4">
-            <h5>Resources for Providers</h5>
-            <p>Want to improve your practice? We have resources on how to better serve your patients. <a href="#">Read more... </a></p>
-          </div>
-        </div>
-
-      </div>
-
-    </section>
-
 
     <footer>
       <p>Copyright (c) 2017 Doctors Without Bias. All Rights Reserved.</p>
