Add resources page

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/main.css">
-    <title>Doctors Without Bias | Inclusive Care for Every Body</title>
+    <title>About | Doctors Without Bias | Inclusive Care for Every Body</title>
   </head>
   <body>
     <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
@@ -18,17 +18,17 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="/">Home</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="/about.html">About <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Providers</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Resources</a>
+            <a class="nav-link" href="/resources.html">Resources</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Contact</a>
@@ -66,7 +66,7 @@
           <div class="col-12">
             <h4>What we do</h4>
             <p>We provide resources for practitioners looking to improve their inclusivity; a directory of inclusive providers; and a forum for reviewing providers based on respectfulness and inclusivity of their practice.</p>
-            <p class="callout">We are explicitly dedicated to helping folks of all shapes, sizes, and backgrounds find high-quality healthcare. We include but do not limit our scope to, diversity of sexual orientation, gender identity or expression, transgender, non-binary, gender-fluid, and gender-queer; people of size and shape; racial, ethnic, religious, or social background; communities of color; veterans; people with disabilities, both visible and invisible; and mental health and cognitive diversity. Did we forget something? <a href="">Let us know!</a></p>
+            <p class="callout">We are explicitly dedicated to helping folks of all shapes, sizes, and backgrounds find high-quality healthcare. We include but do not limit our scope to: diversity of sexual orientation, gender identity or expression, transgender, non-binary, gender-fluid, and gender-queer; people of size and shape; racial, ethnic, religious, or social background; communities of color; veterans; people with disabilities, both visible and invisible; and mental health and cognitive diversity. Did we forget something? <a href="">Let us know!</a></p>
           </div>
         </div>
 
