--- a/resources.html
+++ b/resources.html
@@ -7,19 +7,19 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/main.css">
-    <title>Doctors Without Bias | Inclusive Care for Every Body</title>
+    <title>Resources | Doctors Without Bias | Inclusive Care for Every Body</title>
   </head>
   <body>
     <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="/">Doctors without Bias</a>
+      <a class="navbar-brand" href="#">Doctors without Bias</a>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+          <li class="nav-item">
+            <a class="nav-link" href="/">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/about.html">About</a>
@@ -27,8 +27,8 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Providers</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/resources.html">Resources</a>
+          <li class="nav-item active">
+            <a class="nav-link" href="/resources.html">Resources <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Contact</a>
@@ -40,11 +40,39 @@
         </form>
       </div>
     </nav>
-    <div class="container-fluid hero">
+    <div class="container-fluid about-hero">
       <h1>Doctors Without Bias</h1>
       <h6>Inclusive Care for Every Body</h6>
     </div>
 
+    <section class="main">
+      <div class="container">
+
+        <div class="row">
+          <div class="col-12">
+            <h3>Resources</h3>
+            <p>Healthcare ipsum dolor sit amet, prescription drug prices provider diversity alternative.</p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-4">
+            <h5>Spotlight: Trans Care</h5>
+            <p>Healthcare ipsum dolor sit amet, prescription drug prices provider diversity alternative.</p>
+          </div>
+          <div class="col-4">
+            <h5>Resources for Providers</h5>
+            <p>Healthcare ipsum dolor sit amet, prescription drug prices provider diversity alternative.</p>
+          </div>
+          <div class="col-4">
+            <h5>My Story: Dr. Ipsum</h5>
+            <p>Healthcare ipsum dolor sit amet, prescription drug prices provider diversity alternative.</p>
+          </div>
+        </div>
+
+      </div>
+
+    </section>
     <div class="container-fluid cta">
       <div class="row">
         <div class="col-3"></div>
@@ -56,33 +84,6 @@
         </div>
       </div>
     </div>
-    <section class="main">
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <h3>Doctors Without Bias is your resource to finding a provider who cares.</h3>
-            <p>Healthcare ipsum dolor sit amet, prescription drug prices provider diversity alternative. Trans-friendly aspirin twice-daily, BRCA dementia genetic insulin flavonoid. Insurance globulin provider hemoglobin ischemia. Lab work hydrophilic hypodermic angioblastoma, ectopic aneurysm. </p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-4">
-            <h5>Find a provider.</h5>
-            <p>Search by geography, insurance, specialty, certification, rating, and more. <a href="#">Read more...</a></p>
-          </div>
-          <div class="col-4">
-            <h5>Review providers.</h5>
-            <p>Had a great experience? A not so great one? Let others know! <a href="#">Read more...</a></p>
-          </div>
-          <div class="col-4">
-            <h5>Resources for Providers</h5>
-            <p>Want to improve your practice? We have resources on how to better serve your patients. <a href="#">Read more... </a></p>
-          </div>
-        </div>
-
-      </div>
-
-    </section>
-
 
     <footer>
       <p>Copyright (c) 2017 Doctors Without Bias. All Rights Reserved.</p>
