Fix header and email signup

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="#">Doctors without Bias</a>
+      <a class="navbar-brand" href="#">Doctors Without Bias</a>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
@@ -84,6 +84,7 @@
           <form class="form-inline" action="index.html" >
             <label for="email">Be the first to know when DWB launches!</label>
             <input type="email" id="email" name="" value="" class="form-control" placeholder="me@email.com">
+            <button type="submit" class="btn btn-info" name="button">Submit</button>
           </form>
         </div>
       </div>
