Responsify & mobile-first

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name=viewport content="user-scalable=no, width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
@@ -47,8 +48,8 @@
 
     <div class="container-fluid cta">
       <div class="row">
-        <div class="col-3"></div>
-        <div class="col-6 form-group">
+        <div class="col-1 col-md-2"></div>
+        <div class="col-10 col-md-8 form-group">
           <form class="form-inline" action="index.html" >
             <label for="email">Be the first to know when DWB launches!</label>
             <input type="email" id="email" name="" value="" class="form-control" placeholder="me@email.com">
@@ -66,15 +67,15 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-4">
+          <div class="col-md-4">
             <h5>Find a provider.</h5>
             <p>Search by geography, insurance, specialty, certification, rating, and more. <a href="#">Read more...</a></p>
           </div>
-          <div class="col-4">
+          <div class="col-md-4">
             <h5>Review providers.</h5>
             <p>Had a great experience? A not so great one? Let others know! <a href="#">Read more...</a></p>
           </div>
-          <div class="col-4">
+          <div class="col-md-4">
             <h5>Resources for Providers</h5>
             <p>Want to improve your practice? We have resources on how to better serve your patients. <a href="#">Read more... </a></p>
           </div>
